Added page2 with GSAP

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
           <div class="navbar-footer">
             <h1>Tomorrow's Brands, Today.™</h1>
-            <hr class="navbar-hr">
+            <hr class="navbar-hr" />
             <div class="navbar-footer-right">
               <a href="#"
                 ><h1 class="btn">X<span></span></h1>
@@ -135,6 +135,20 @@
               ></a>
             </div>
           </div>
+        </div>
+      </section>
+      <section id="page2">
+        <div class="page2-header">
+          <div class="page2-header-main">
+            <h1>Tomorrow's Brands, Today.™</h1>
+            <h1>Paris / San Diego</h1>
+          </div>
+          <hr class="page2-hr" />
+        </div>
+        <div class="page2-main">
+          <p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We are a venture firm and  digital agency. Our mission is to transform founders' visions into remarkable brands. Choose traditional compensation or an equity offset through our Venture Model — your vision, your decision.
+          </p>
         </div>
       </section>
       <section id="sample"></section>
