--- a/index.html
+++ b/index.html
@@ -147,7 +147,11 @@
         </div>
         <div class="page2-main">
           <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We are a venture firm and  digital agency. Our mission is to transform founders' visions into remarkable brands. Choose traditional compensation or an equity offset through our Venture Model — your vision, your decision.
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We are a venture
+            firm and digital agency. Our mission is to transform founders'
+            visions into remarkable brands. Choose traditional compensation or
+            an equity offset through our Venture Model — your vision, your
+            decision.
           </p>
         </div>
       </section>
@@ -165,6 +169,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://unpkg.com/lenis@1.1.3/dist/lenis.min.js"></script>
     <script src="script.js"></script>
+    <script>
+      const lenis = new Lenis({
+        lerp: 0.05, // Adjust the lerp value here (default is 0.1)
+        // Other Lenis options if needed
+      });
+
+      function raf(time) {
+        lenis.raf(time);
+        requestAnimationFrame(raf);
+      }
+
+      requestAnimationFrame(raf);
+    </script>
   </body>
 </html>
