--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Text Effect -->
+    <!-- https://www.w3resource.com/html-css-exercise/html-css-practical-exercises/html-css-practical-exercise-15.php -->
     <!-- https://rejouice.com -->
   </head>
   <body>
@@ -153,6 +155,46 @@
             an equity offset through our Venture Model — your vision, your
             decision.
           </p>
+        </div>
+      </section>
+      <section id="page3">
+        <div class="page3-header">
+          <div class="page3-header-box">
+            <h3>Agency & Venture <span>Models</span></h3>
+            <div class="page3-header-text">
+              <h1><span>Explore our services</span></h1> <br>
+              <h1><span>and engagement models</span></h1>
+            </div>
+          </div>
+        </div>
+        <div class="page3-grid">
+          <div class="page3-grid-header">
+            <h1>Transforming visions into brands.</h1>
+            <h1 class="btn">See the work ↵<span></span></h1>
+          </div>
+          <div class="page3-grid-main">
+            <div class="page3-grid-box p3-box-1">
+              <img src="https://images.prismic.io/rejouice/d8e1fa1f-4f24-41e1-a249-098c62df5aff_Group+46+%281%29.jpg?auto=compress,format" alt="">
+              <video src="./Website-homepage-Work-01_1.mp4" autoplay muted loop></video>
+              <div class="page3-grid-logo">
+                <img src="./page3/922bdc39-4619-4f3e-ad4d-0e68c4dc1ef4_Rivian_LogoLock-Up-Blanc.avif" alt="">
+              </div>
+            </div>
+            <div class="page3-grid-box p3-box-2">
+              <img src="https://images.prismic.io/rejouice/e0350a3d-c390-4d97-af1a-5c86bc822b52_Group+3929.jpg?auto=compress,format" alt="">
+              <video src="./Website-homepage-Work-02_1.mp4" autoplay muted loop></video>
+              <div class="page3-grid-logo">
+                <img src="./page3/oura.svg" alt="">
+              </div>
+            </div>
+            <div class="page3-grid-box p3-box-3">
+              <img src="https://images.prismic.io/rejouice/2874f084-ec6c-4a19-b025-a55c1e6db929_Group+3692.jpg?auto=compress,format" alt="">
+              <video src="./Website-homepage-Work-03_1.mp4" autoplay muted loop></video>
+              <div class="page3-grid-logo">
+                <img src="./page3/Logo.svg" alt="">
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section id="sample"></section>
