added page 4 and page 5 with GASP

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
           <div class="page3-header-box">
             <h3>Agency & Venture <span>Models</span></h3>
             <div class="page3-header-text">
-              <h1><span>Explore our services</span></h1> <br>
+              <h1><span>Explore our services</span></h1>
+              <br />
               <h1><span>and engagement models</span></h1>
             </div>
           </div>
@@ -174,27 +175,85 @@
           </div>
           <div class="page3-grid-main">
             <div class="page3-grid-box p3-box-1">
-              <img src="https://images.prismic.io/rejouice/d8e1fa1f-4f24-41e1-a249-098c62df5aff_Group+46+%281%29.jpg?auto=compress,format" alt="">
-              <video src="./Website-homepage-Work-01_1.mp4" autoplay muted loop></video>
+              <img
+                src="https://images.prismic.io/rejouice/d8e1fa1f-4f24-41e1-a249-098c62df5aff_Group+46+%281%29.jpg?auto=compress,format"
+                alt=""
+              />
+              <video
+                src="./Website-homepage-Work-01_1.mp4"
+                autoplay
+                muted
+                loop
+              ></video>
               <div class="page3-grid-logo">
-                <img src="./page3/922bdc39-4619-4f3e-ad4d-0e68c4dc1ef4_Rivian_LogoLock-Up-Blanc.avif" alt="">
+                <img
+                  src="./page3/922bdc39-4619-4f3e-ad4d-0e68c4dc1ef4_Rivian_LogoLock-Up-Blanc.avif"
+                  alt=""
+                />
               </div>
             </div>
             <div class="page3-grid-box p3-box-2">
-              <img src="https://images.prismic.io/rejouice/e0350a3d-c390-4d97-af1a-5c86bc822b52_Group+3929.jpg?auto=compress,format" alt="">
-              <video src="./Website-homepage-Work-02_1.mp4" autoplay muted loop></video>
+              <img
+                src="https://images.prismic.io/rejouice/e0350a3d-c390-4d97-af1a-5c86bc822b52_Group+3929.jpg?auto=compress,format"
+                alt=""
+              />
+              <video
+                src="./Website-homepage-Work-02_1.mp4"
+                autoplay
+                muted
+                loop
+              ></video>
               <div class="page3-grid-logo">
-                <img src="./page3/oura.svg" alt="">
+                <img src="./page3/oura.svg" alt="" />
               </div>
             </div>
             <div class="page3-grid-box p3-box-3">
-              <img src="https://images.prismic.io/rejouice/2874f084-ec6c-4a19-b025-a55c1e6db929_Group+3692.jpg?auto=compress,format" alt="">
-              <video src="./Website-homepage-Work-03_1.mp4" autoplay muted loop></video>
+              <img
+                src="https://images.prismic.io/rejouice/2874f084-ec6c-4a19-b025-a55c1e6db929_Group+3692.jpg?auto=compress,format"
+                alt=""
+              />
+              <video
+                src="./Website-homepage-Work-03_1.mp4"
+                autoplay
+                muted
+                loop
+              ></video>
               <div class="page3-grid-logo">
-                <img src="./page3/Logo.svg" alt="">
+                <img src="./page3/Logo.svg" alt="" />
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section id="page4">
+        <div class="page4-header">
+        <h1>  We operate on a simple philosophy: <br> Quality over quantity.</h1>
+          <hr class="page4-hr"/>
+        </div>
+        <div class="page4-main">
+          <p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We partner with up to 5 clients each year. This allows intense focus on the transformation and launch of your brand by our very best team, which is the only team we have.  We specialize in working with startups that are revolutionizing their industries.
+          </p>
+        </div>
+      </section>
+      <section id="page5">
+        <video muted autoplay loop src="https://rejouice.com/assets/videos/RJ-BALL-BLUE-ORANGE-scaled.webm"></video>
+        <svg viewBox="0 0 100 100">
+          <circle cx="50" cy="50" r="49" stroke="#fff" stroke-width="0.25" fill="none"></circle>
+        </svg>
+        <svg viewBox="0 0 100 100">
+          <circle cx="50" cy="1" r="1" fill="#fff"></circle>
+        </svg>
+        <div class="page5-content">
+          <div class="page5-content-inner">
+            <div class="page5-box">
+              <div class="page5-span">
+                <span>2</span>
+              </div>
+            </div>
+            <h1>seats</h1> <br>
+          </div>
+          <h2>available for 2024</h2>
         </div>
       </section>
       <section id="sample"></section>
