--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | REJOUICE®</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link
       rel="shortcut icon"
       href="https://rejouice.com/assets/favicon/32x32.png"
@@ -17,6 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <!-- Text Effect -->
     <!-- https://www.w3resource.com/html-css-exercise/html-css-practical-exercises/html-css-practical-exercise-15.php -->
     <!-- https://rejouice.com -->
@@ -256,6 +258,39 @@
           <h2>available for 2024</h2>
         </div>
       </section>
+      <section id="page6">
+        <div class="page6-header">
+          <h1>  Strategy & emotion. <br>
+            You need both.</h1>
+            <hr class="page6-hr"/>
+          </div>
+          <div class="page6-main">
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>Data matters, yet it's the emotion that drives buying decisions.</span> <span>We don't believe in'one size fits all.' We craft unique brand experiences that deeply resonate with your audience and boost your KPIs.</span>
+            </p>
+          </div>
+      </section>
+      <section id="page7">
+        <div class="page7-header">
+          <div class="page7-header-main">
+            <h2>Get in touch.</h2>
+            <h1 class="btn">Contact  ↵ <span></span></h1>
+          </div>
+          <hr class="page7-hr">
+        </div>
+        <div class="page7-swiper">
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/57ac2830-96e7-4174-a104-b384126bf98c_fec955552eb681ff6c273774515e6c2e.jpg?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
+              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/a19d8427-5008-4dce-afa4-5d66118a0463_d7a851a9d8e2eb36cf93ffe4a6fa3701.jpeg?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
+              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/36450525-8a76-4a44-b6d4-59c00ad0b50d_RJ-Home-OuraRing-x2.png?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
+              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/d3289122-3f25-43f3-b140-11a342a484d7_Mask+group+%2838%29.jpg?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
+              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/8059f4af-8ba3-4e5f-a14b-ba5ed760963f_Mask+group+%2839%29.jpg?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
+              
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="sample"></section>
     </section>
     <script
@@ -271,6 +306,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="https://unpkg.com/lenis@1.1.3/dist/lenis.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
     <script>
       const lenis = new Lenis({
