--- a/index.html
+++ b/index.html
@@ -291,6 +291,14 @@
           </div>
         </div>
       </section>
+      <section id="page8">
+        <div class="page8-main">
+          <h2>We're uniquely built ↵</h2>
+          <h1 class="btn"><div>About us</div> <div>About us</div> <span></span></h1>
+        </div>
+        <div class="page8-cursor">
+        </div>
+      </section>
       <section id="sample"></section>
     </section>
     <script
