--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | REJOUICE®</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link
       rel="shortcut icon"
       href="https://rejouice.com/assets/favicon/32x32.png"
@@ -229,19 +232,38 @@
       </section>
       <section id="page4">
         <div class="page4-header">
-        <h1>  We operate on a simple philosophy: <br> Quality over quantity.</h1>
-          <hr class="page4-hr"/>
+          <h1>
+            We operate on a simple philosophy: <br />
+            Quality over quantity.
+          </h1>
+          <hr class="page4-hr" />
         </div>
         <div class="page4-main">
           <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We partner with up to 5 clients each year. This allows intense focus on the transformation and launch of your brand by our very best team, which is the only team we have.  We specialize in working with startups that are revolutionizing their industries.
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We partner with up
+            to 5 clients each year. This allows intense focus on the
+            transformation and launch of your brand by our very best team, which
+            is the only team we have. We specialize in working with startups
+            that are revolutionizing their industries.
           </p>
         </div>
       </section>
       <section id="page5">
-        <video muted autoplay loop src="https://rejouice.com/assets/videos/RJ-BALL-BLUE-ORANGE-scaled.webm"></video>
+        <video
+          muted
+          autoplay
+          loop
+          src="https://rejouice.com/assets/videos/RJ-BALL-BLUE-ORANGE-scaled.webm"
+        ></video>
         <svg viewBox="0 0 100 100">
-          <circle cx="50" cy="50" r="49" stroke="#fff" stroke-width="0.25" fill="none"></circle>
+          <circle
+            cx="50"
+            cy="50"
+            r="49"
+            stroke="#fff"
+            stroke-width="0.25"
+            fill="none"
+          ></circle>
         </svg>
         <svg viewBox="0 0 100 100">
           <circle cx="50" cy="1" r="1" fill="#fff"></circle>
@@ -253,40 +275,75 @@
                 <span>2</span>
               </div>
             </div>
-            <h1>seats</h1> <br>
+            <h1>seats</h1>
+            <br />
           </div>
           <h2>available for 2024</h2>
         </div>
       </section>
       <section id="page6">
         <div class="page6-header">
-          <h1>  Strategy & emotion. <br>
-            You need both.</h1>
-            <hr class="page6-hr"/>
-          </div>
-          <div class="page6-main">
-            <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>Data matters, yet it's the emotion that drives buying decisions.</span> <span>We don't believe in'one size fits all.' We craft unique brand experiences that deeply resonate with your audience and boost your KPIs.</span>
-            </p>
-          </div>
+          <h1>
+            Strategy & emotion. <br />
+            You need both.
+          </h1>
+          <hr class="page6-hr" />
+        </div>
+        <div class="page6-main">
+          <p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+              >Data matters, yet it's the emotion that drives buying
+              decisions.</span
+            >
+            <span
+              >We don't believe in'one size fits all.' We craft unique brand
+              experiences that deeply resonate with your audience and boost your
+              KPIs.</span
+            >
+          </p>
+        </div>
       </section>
       <section id="page7">
         <div class="page7-header">
           <div class="page7-header-main">
             <h2>Get in touch.</h2>
-            <h1 class="btn">Contact  ↵ <span></span></h1>
+            <h1 class="btn">Contact ↵ <span></span></h1>
           </div>
-          <hr class="page7-hr">
+          <hr class="page7-hr" />
         </div>
         <div class="page7-swiper">
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/57ac2830-96e7-4174-a104-b384126bf98c_fec955552eb681ff6c273774515e6c2e.jpg?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
-              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/a19d8427-5008-4dce-afa4-5d66118a0463_d7a851a9d8e2eb36cf93ffe4a6fa3701.jpeg?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
-              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/36450525-8a76-4a44-b6d4-59c00ad0b50d_RJ-Home-OuraRing-x2.png?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
-              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/d3289122-3f25-43f3-b140-11a342a484d7_Mask+group+%2838%29.jpg?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
-              <div class="swiper-slide"><img src="https://images.prismic.io/rejouice/8059f4af-8ba3-4e5f-a14b-ba5ed760963f_Mask+group+%2839%29.jpg?auto=compress%2Cformat&fm=webp&width=2048" alt=""></div>
-              
+              <div class="swiper-slide">
+                <img
+                  src="https://images.prismic.io/rejouice/57ac2830-96e7-4174-a104-b384126bf98c_fec955552eb681ff6c273774515e6c2e.jpg?auto=compress%2Cformat&fm=webp&width=2048"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://images.prismic.io/rejouice/a19d8427-5008-4dce-afa4-5d66118a0463_d7a851a9d8e2eb36cf93ffe4a6fa3701.jpeg?auto=compress%2Cformat&fm=webp&width=2048"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://images.prismic.io/rejouice/36450525-8a76-4a44-b6d4-59c00ad0b50d_RJ-Home-OuraRing-x2.png?auto=compress%2Cformat&fm=webp&width=2048"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://images.prismic.io/rejouice/d3289122-3f25-43f3-b140-11a342a484d7_Mask+group+%2838%29.jpg?auto=compress%2Cformat&fm=webp&width=2048"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://images.prismic.io/rejouice/8059f4af-8ba3-4e5f-a14b-ba5ed760963f_Mask+group+%2839%29.jpg?auto=compress%2Cformat&fm=webp&width=2048"
+                  alt=""
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -294,12 +351,82 @@
       <section id="page8">
         <div class="page8-main">
           <h2>We're uniquely built ↵</h2>
-          <h1 class="btn"><div>About us</div> <div>About us</div> <span></span></h1>
+          <h1 class="btn">
+            <div>About us</div>
+            <div>About us</div>
+            <span></span>
+          </h1>
         </div>
-        <div class="page8-cursor">
+        <div class="page8-cursor"></div>
+      </section>
+      <section id="footer">
+        <div class="footer-upper">
+          <div class="footer-left">
+            <h1>Relax. We've got you.</h1>
+            <a href="#" class="btn-main">
+              <div>Take a seat</div>
+              <div>Take a seat</div>
+            </a>
+          </div>
+          <div class="footer-right">
+            <ul>
+              <li>
+                <a href="#"
+                  ><h1 class="btn">Home <span></span></h1
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><h1 class="btn">Work <span></span></h1
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><h1 class="btn">About <span></span></h1
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><h1 class="btn">Services <span></span></h1
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><h1 class="btn">Contact <span></span></h1
+                ></a>
+              </li>
+            </ul>
+            <ul class="navbar-footer-right">
+              <a href="#"
+                ><h1 class="btn">X<span></span></h1>
+                <i class="fa-solid fa-arrow-right"></i
+              ></a>
+              <a href="#"
+                ><h1 class="btn">Instagram<span></span></h1>
+                <i class="fa-solid fa-arrow-right"></i
+              ></a>
+              <a href="#"
+                ><h1 class="btn">LinkedIn<span></span></h1>
+                <i class="fa-solid fa-arrow-right"></i
+              ></a>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-lower">
+         <div class="footer-lower-h1">
+          <h1>
+            <span>r</span>
+            <span>e</span>
+            <span>j</span>
+            <span>o</span>
+            <span>u</span>
+            <span>i</span>
+            <span>c</span>
+            <span>e</span>
+          </h1>
+         </div>
         </div>
       </section>
-      <section id="sample"></section>
     </section>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
