--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     <!-- https://rejouice.com -->
   </head>
   <body>
+    <section id="loader">
+      <div class="loader">
+        <h1 class="loader-h1">Tomorrow's Brands, Today.</h1>
+       <div class="loader-h1-2"> <h1>Reimagined by <span>Atharva</span>.</h1></div>
+      </div>
+    </section>
     <section id="main">
       <section id="hero">
         <div class="hero-content">
@@ -50,7 +56,7 @@
         ></video>
 
         <div class="hero-cursor">
-          <span>Play Reel</span>
+          <span>Agency</span>
         </div>
         <div class="navbar">
           <h1 class="btn close-btn">Close <span></span></h1>
